# lender

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  run-migration.sh
.github/workflows/: rust.yml
migrations/: 20230922101152_media_table.down.sql  20230922101152_media_table.up.sql
src/: main.rs
src/models/: media.rs  user.rs
src/routes/: config.rs  health.rs  media.rs  mod.rs  user.rs
test/: test_db.sh  test_endpoint.sh
