[package]
name = "lender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["postgres", "macros", "runtime-async-std-native-tls", "chrono", "uuid"] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = {version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }
